<resources>
    <string name="app_name">Ignite</string>
    <string name="Organiser">Are you Organizer??</string>
    <string name="Partiipants">Are you a Participant??</string>
    <string name="Others">Others</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_In">Sign In</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="name">name</string>
    <string name="Enter_Name">Enter your name</string>
    <string name="College">College</string>
    <string name="EnterCollege">Enter Your College</string>
    <string name="EmailId">Enter your EmailId</string>
    <string name="prompt_email">Email</string>
    <string name="Pswd">Password</string>
    <string name="EnterPswd">Password must be strong</string>
    <string name="ConfirmPswd">Confirm Password</string>
    <string name="PhnNo">Phone Number</string>
    <string name="EnterPhnNo">Enter your phone number</string>
    <string name="SelectEvent">Select Event</string>

    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_direction">Map</string>
    <string name="title_activity_home">home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Sponsor">Sponsor</string>
    <string name="Team">Team</string>
    <string name="Live">Live</string>
    <string name="Events">Events</string>
    <string name="Score">Score</string>
    <string name="Gallery">Gallery</string>
    <string name="Winner">Winner</string>
    <string name="Workshops">Workshops</string>
    <string name="Direction">Direction</string>
</resources>
