<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/bak4"
    >

    <EditText
        android:id="@+id/nameP"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Enter_Name"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/College"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/College"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EnterCollege"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/EmailP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameP" />


    <EditText
        android:id="@+id/EmailP"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EmailId"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/College" />


    <EditText
        android:id="@+id/PswdP"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EnterPswd"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EmailP" />


    <EditText
        android:id="@+id/PhnNoP"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/EnterPhnNo"
        android:inputType="phone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cpswdp" />

    <Button
        android:id="@+id/SignUpP"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="100dp"
        android:gravity="center"
        android:onClick="signUpp"
        android:text="@string/Sign_Up"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cpswdp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ConfirmPswd"
        android:inputType="textPassword"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/PhnNoP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PswdP" />

    <ImageButton
        android:id="@+id/ficon"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="69dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="12dp"
        android:visibility="visible"
        app:layout_constraintRight_toLeftOf="@id/gicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpP"
        app:srcCompat="@drawable/faebook48"
        tools:srcCompat="@drawable/faebook48"
        android:background="@color/trans"
        android:onClick="fb1"/>

    <ImageButton
        android:id="@+id/gicon"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpP"
        app:srcCompat="@drawable/gmail48"
        tools:srcCompat="@drawable/gmail48"
        android:background="@color/trans"
        android:onClick="g1"/>

</android.support.constraint.ConstraintLayout>