<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradient"
    >

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/Organiser"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="30dp"
        android:alpha="0.25"
        android:onClick="signUpOrganiser"
        android:text="@string/Sign_Up"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_toEndOf="@+id/button"
        android:layout_toRightOf="@+id/button"
        android:alpha="0.25"
        android:onClick="login"
        android:text="@string/Sign_In"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_below="@+id/textview1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="131dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:text="@string/Partiipants"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="45dp"
        android:alpha="0.25"
        android:onClick="signUp"
        android:text="@string/Sign_Up"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:alpha="0.25"
        android:onClick="login"
        android:text="@string/Sign_In"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="57dp"
        android:alpha="0.25"
        android:onClick="othersHomepage"
        android:text="@string/Others"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold" />

</RelativeLayout>