<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity"
    android:background="@drawable/bak4"
    >

    <Button
        android:id="@+id/signin"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:onClick="loginHomepage"
        android:text="@string/Sign_In"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="223dp"
        app:layout_constraintTop_toBottomOf="@id/pswdtext"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/emailtext"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:layout_marginTop="88dp"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />/>

    <EditText
        android:id="@+id/pswdtext"
        android:layout_width="235dp"
        android:layout_height="48dp"
        android:ems="10"
        android:textColor="@color/white"
        android:hint="@string/Pswd"
        android:inputType="textPassword"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailtext"
        app:layout_constraintVertical_bias="0.487" />

    <Button
        android:id="@+id/ForgotPswd"
        android:layout_width="120dp"
        android:layout_height="46dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:background="@color/black"
        android:ems="10"
        android:inputType="textPersonName"
        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
        android:padding="8dp"
        android:text="Forgot Password?"
        android:textColor="#00ffff"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signin" />

</android.support.constraint.ConstraintLayout>