<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpOrganisor"
    android:background="@drawable/bak4"
    >

    <EditText
        android:id="@+id/ed1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Enter_Name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ed2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="64dp"
        android:gravity="center"
        android:text="@string/Sign_Up"
        android:onClick="signUpO"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed5"/>


    <EditText
        android:id="@+id/ed2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Enter Your Email"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ed3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed1" />

    <EditText
        android:id="@+id/ed3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Password"
        android:textStyle="bold"
        android:gravity="center"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="176dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ed4"
        app:layout_constraintTop_toBottomOf="@id/ed2"
        android:textColor="@color/black"


        />

    <EditText
        android:id="@+id/ed4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="236dp"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed3"
        app:layout_constraintBottom_toTopOf="@id/ed5"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/ed5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/EnterPhnNo"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed4"

        />

    <ImageButton
        android:id="@+id/facebookicon"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="69dp"
        android:layout_height="50dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="12dp"
        android:visibility="visible"
        app:layout_constraintRight_toLeftOf="@id/gicon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button6"
        android:background="@color/trans"
        app:srcCompat="@drawable/faebook48"
        tools:srcCompat="@drawable/faebook48"
        android:onClick="fb2"/>

    <ImageButton
        android:id="@+id/gmailicon"
        android:layout_width="65dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button6"
        app:srcCompat="@drawable/gmail48"
        tools:srcCompat="@drawable/gmail48"
        android:background="@color/trans"
        android:onClick="g2"
        />

</android.support.constraint.ConstraintLayout>